HTML/CSS Advancement

--- a/pages/wsp_trucho.html
+++ b/pages/wsp_trucho.html
@@ -17,13 +17,21 @@
 
             <div id="phone_header"></div>
 
-            <div class="message_globe">asdasd</div>
+            <div class="profile_globe"></div>
+            <div class="message_globe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quidem quo quisquam
+                distinctio dicta? Laborum repellat aut voluptatibus aspernatur deleniti a illum vel, expedita commodi,
+                sunt architecto ea molestiae aliquam.
+            </div>
 
+            <div class="profile_globe"></div>
+            <div class="message_globe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quidem quo quisquam
+                distinctio dicta? Laborum repellat aut voluptatibus aspernatur deleniti a illum vel, expedita commodi,
+                sunt architecto ea molestiae aliquam.
             </div>
 
         </section>
 
-        <button id="bot_button"></button>
+        <a href="/index.html"><button id="bot_button"></button></a>
 
     </section>
 </body>
