--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="/styles/index.css">
     <title>Phone_Desktop</title>
 </head>
@@ -21,8 +20,8 @@
             </div>
 
             <div id="bot_half_screen">
-                <button class="app" id="wsp_trucho"></button>
-                <button class="app" id="nexus"></button>
+                <a href="/pages/wsp_trucho.html"><button class="app" id="wsp_trucho"></button></a>
+                <a href="/pages/nexus.html"><button class="app" id="nexus"></button></a>
             </div>
 
         </section>
