New syles and html

--- a/pages/wsp_trucho.html
+++ b/pages/wsp_trucho.html
@@ -5,31 +5,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="/styles/wsp_trucho.css">
-    <title>Wsp_Trucho</title>
+    <title>WaZap</title>
 </head>
 
 <body>
     <section id="phone">
 
-        <section id="phone_screen">
+        <div id="phone_screen_limits">
 
-            <div id="phone_header"></div>
+            <section id="phone_touch">
 
-            <div class="profile_globe"></div>
-            <div class="message_globe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quidem quo quisquam
-                distinctio dicta? Laborum repellat aut voluptatibus aspernatur deleniti a illum vel, expedita commodi,
-                sunt architecto ea molestiae aliquam.
-            </div>
+                <div id="phone_header"></div>
 
-            <div class="profile_globe"></div>
-            <div class="message_globe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quidem quo quisquam
-                distinctio dicta? Laborum repellat aut voluptatibus aspernatur deleniti a illum vel, expedita commodi,
-                sunt architecto ea molestiae aliquam.
-            </div>
+                <div class="profile_globe"></div>
+                <div class="message_globe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quidem quo
+                    quisquam
+                    distinctio dicta? Laborum repellat aut voluptatibus aspernatur deleniti a illum vel, expedita
+                    commodi,
+                    sunt architecto ea molestiae aliquam.
+                </div>
 
-        </section>
+                <div class="profile_globe"></div>
+                <div class="message_globe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quidem quo
+                    quisquam
+                    distinctio dicta? Laborum repellat aut voluptatibus aspernatur deleniti a illum vel, expedita
+                    commodi,
+                    sunt architecto ea molestiae aliquam.
+                </div>
+
+                <input id="message_input" type="text">
+                <button id="send_message" type="submit"></button>
+
+        </div>
+
 
         <a href="/index.html"><button id="bot_button"></button></a>
 
