--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/index.css">
-    <title>Phone_Desktop</title>
+    <title>Desktop</title>
 </head>
 
 <body>
     <section id="phone">
-        <section id="phone_screen">
 
-            <div id="phone_header"></div>
+        <div id="phone_screen_limits"></div>
+
+        <section id="phone_touch">
 
             <div id="top_half_screen">
+                <div id="phone_header"></div>
                 <div id="clock"><strong>11:11</strong></div>
             </div>
 
