--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <button id="bot_button"></button>
 
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/scripts/phone.js"></script>
 </body>
 
 </html>
