--- a/pages/wsp_trucho.html
+++ b/pages/wsp_trucho.html
@@ -43,6 +43,7 @@
         <a href="/index.html"><button id="bot_button"></button></a>
 
     </section>
+    <script src="/scripts/wsp_trucho.js"></script>
 </body>
 
 </html>
