--- a/pages/nexus.html
+++ b/pages/nexus.html
@@ -16,6 +16,14 @@
 
         <section id="phone_touch">
             <div id="phone_header"></div>
+            <div id ="open_nexus">
+                <p>Nexus - Connect The Universe
+
+                    Bienvenido a Nexus. Aquí podrás ponerte en contacto con dispositivos provenientes de cualquier espacio y tiempo. 
+                
+                    Como habrás notado, al abrir Nexus por primera vez, tu teléfono se reinició. Ahora te encuentras en medio de una conexión espacio-temporal con otro dispositivo mediante señales electromagnéticas muy potentes, capaces de atravesar los límites que separan un mundo con otro. Esto cuesta muchísima energía, y aunque nuestros servidores poseen buenas fuentes para cubrir gran parte del consumo, nos damos la libertad de aprovechar las baterías de los celulares implicados para el ahorro del mismo, por lo que podrías notar que la carga de tu teléfono se reduce más rápidamente. 
+                </p>
+            </div>
 
         </section>
 
