--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     </section>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="/scripts/phone.js"></script>
+    <script src="/scripts/index.js"></script>
 </body>
 
 </html>
