--- a/pages/nexus.html
+++ b/pages/nexus.html
@@ -16,7 +16,7 @@
 
         <section id="phone_touch">
             <div id="phone_header"></div>
-            <div id ="open_nexus">
+            <div id ="phone_nexus">
                 <p>Nexus - Connect The Universe
 
                     Bienvenido a Nexus. Aquí podrás ponerte en contacto con dispositivos provenientes de cualquier espacio y tiempo. 
@@ -30,6 +30,7 @@
 
         <a href="/index.html"><button id="bot_button"></button></a>
     </section>
+    <script src="/scripts/nexus.js"></script>
 </body>
 
 </html>
