Index and Nexus Improvement

--- a/pages/nexus.html
+++ b/pages/nexus.html
@@ -17,6 +17,8 @@
         <section id="phone_touch">
             <div id="phone_header"></div>
 
+            <div id="loading">Cargando...</div>
+            <div id="loading_bar"></div>
         </section>
 
 
