Agree js to html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <a href="/pages/wsp_trucho.html"><button class="app" id="wsp_trucho"></button></a>
                 <a href="/pages/nexus.html"><button class="app" id="nexus"></button></a>
             </div>
+            <div></div>
 
         </section>
 
