Anotations and design fixes

--- a/pages/cptd_index.html
+++ b/pages/cptd_index.html
@@ -22,8 +22,8 @@
             </div>
 
             <div id="bot_half_screen">
-                <a href="/pages/cptd_wsp.html"><button class="app" id="wsp_trucho"></button></a>
-                <a href="/pages/real_nexus.html"><button class="app" id="nexus"></button></a>
+                <a id="wsp_trucho" class="app" href="/pages/cptd_wsp.html"></a>
+                <a id="nexus" class="app" href="/pages/real_nexus.html"></a>
             </div>
 
         </section>
