--- a/index.html
+++ b/index.html
@@ -1,37 +1,35 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/index.css" />
-    <title>Desktop</title>
-  </head>
 
-  <body>
-    <section id="phone">
-      <div id="phone_screen_limits"></div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/styles/index.css" />
+  <title>Desktop</title>
+</head>
 
-      <section id="phone_touch">
-        <div id="top_half_screen">
-          <div id="phone_header"></div>
-          <div id="clock"><strong>11:11</strong></div>
-        </div>
+<body>
+  <section id="phone">
+    <div id="phone_screen_limits"></div>
 
-        <div id="bot_half_screen">
-          <a href="/pages/wsp_trucho.html"
-            ><button class="app" id="wsp_trucho"></button
-          ></a>
-          <a href="/pages/nexus.html"
-            ><button class="app" id="nexus"></button
-          ></a>
-        </div>
-        <div></div>
-      </section>
+    <section id="phone_touch">
+      <div id="top_half_screen">
+        <div id="phone_header"></div>
+        <div id="clock"><strong>11:11</strong></div>
+      </div>
 
-      <button id="bot_button"></button>
+      <div id="bot_half_screen">
+        <a id="wsp_trucho" class="app" href="/pages/wsp_trucho.html"></a>
+        <a id="nexus" class="app" href="/pages/nexus.html"></a>
+      </div>
+      <div></div>
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="/scripts/index.js"></script>
-  </body>
+
+    <button id="bot_button"></button>
+  </section>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="/scripts/index.js"></script>
+</body>
+
 </html>
