--- a/pages/wsp_trucho.html
+++ b/pages/wsp_trucho.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -19,21 +19,12 @@
                 <div id="phone_header"></div>
 
                 <div class="profile_globe"></div>
-                <div class="message_globe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quidem quo
-                    quisquam
-                    distinctio dicta? Laborum repellat aut voluptatibus aspernatur deleniti a illum vel, expedita
-                    commodi,
-                    sunt architecto ea molestiae aliquam.
-                </div>
 
                 <div class="profile_globe"></div>
-                <div class="message_globe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quidem quo
-                    quisquam
-                    distinctio dicta? Laborum repellat aut voluptatibus aspernatur deleniti a illum vel, expedita
-                    commodi,
-                    sunt architecto ea molestiae aliquam.
-                </div>
 
+                <div id="chat">
+                    <!-- Aquí se mostrarán los mensajes -->
+                </div>
                 <input id="message_input" type="text">
                 <button id="send_message" type="submit"></button>
 
