--- a/pages/nexus.html
+++ b/pages/nexus.html
@@ -16,6 +16,7 @@
         <div id="phone_header"></div>
         <div id="loading">Cargando...</div>
         <div id="loading_bar"></div>
+        <div id="screen"></div>
       </section>
 
       <a href="/index.html"><button id="bot_button"></button></a>
