new div message_globe

--- a/pages/wsp_trucho.html
+++ b/pages/wsp_trucho.html
@@ -17,13 +17,8 @@
             <section id="phone_touch">
 
                 <div id="phone_header"></div>
-
-                <div class="profile_globe"></div>
-
-                <div class="profile_globe"></div>
-
-                <div id="chat">
-                    <!-- Aquí se mostrarán los mensajes -->
+                <div class="message_globe">
+                    <p>Fijate que tenes una app llamada Nexus instalada. Te sugiero que la abras, es importante. Me creas o no, al final me lo vas a agradecer.</p>
                 </div>
                 <input id="message_input" type="text">
                 <button id="send_message" type="submit"></button>
