--- a/pages/nexus.html
+++ b/pages/nexus.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/nexus.css" />
-    <title>Nexus</title>
-  </head>
 
-  <body>
-    <section id="phone">
-      <div id="phone_screen_limits"></div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/styles/nexus.css" />
+  <title>Nexus</title>
+</head>
 
-      <section id="phone_touch">
-        <div id="phone_header"></div>
-        <div id="loading">Cargando...</div>
-        <div id="loading_bar"></div>
-        <div id="screen"></div>
-      </section>
+<body>
+  <section id="phone">
+    <div id="phone_screen_limits"></div>
 
-      <a href="/index.html"><button id="bot_button"></button></a>
+    <section id="phone_touch">
+      <div id="phone_header"></div>
+      <div id="loading">Cargando...</div>
+      <div id="loading_bar"></div>
+      <div id="screen"></div>
     </section>
-    <script src="/scripts/nexus.js"></script>
-  </body>
+
+    <button id="bot_button"></button>
+  </section>
+  <script src="/scripts/nexus.js"></script>
+</body>
+
 </html>
