--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <section id="phone_touch">
         <div id="top_half_screen">
           <div id="phone_header"></div>
-          <div id="clock"><strong>11:11</strong></div>
+          <div id="clock"></div>
         </div>
 
         <div id="bot_half_screen">
@@ -24,16 +24,18 @@
         </div>
         <div></div>
       </section>
-
+      <div id="popup" class="popup">
+        <div class="popup-content">
+          <h2>Mensaje de número desconocido</h2>
+          <p>Deseas leer el mensaje?</p>
+          <div class="buttons">
+            <button onclick="accept()">Aceptar</button>
+            <button onclick="cancel()">Cancelar</button>
+          </div>
+        </div>
+      </div>
       <button id="bot_button"></button>
     </section>
-
-    <div id="popup" class="popup hidden">
-      <h1>Mensaje de número desconocido</h1>
-      <p>Deseas agregar contacto?</p>
-      <button onclick="aceptar()">Aceptar</button>
-      <button onclick="cancelar()">Cancelar</button>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/scripts/index.js"></script>
   </body>
