--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
     <button id="bot_button"></button>
   </section>
 
-  <div id="popup" class="popup hidden">
-    <h1>Mensaje de número desconocido</h1>
-    <p>Deseas agregar contacto?</p>
-    <button onclick="aceptar()">Aceptar</button>
-    <button onclick="cancelar()">Cancelar</button>
+  <div id="popup" class="popup">
+    <div class="popup-content">
+      <h2>Mensaje de número desconocido</h2>
+      <p>Deseas leer el mensaje?</p>
+      <div class="buttons">
+        <button onclick="accept()">Aceptar</button>
+        <button onclick="cancel()">Cancelar</button>
+      </div>
+    </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="/scripts/index.js"></script>
