--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section id="phone_touch">
       <div id="top_half_screen">
         <div id="phone_header"></div>
-        <div id="clock"><strong>11:11</strong></div>
+        <div id="clock"></div>
       </div>
 
       <div id="bot_half_screen">
@@ -26,7 +26,6 @@
       <div></div>
     </section>
 
-    <button id="bot_button"></button>
   </section>
 
   <div id="popup" class="popup">
