odified cptd_index.html

--- a/pages/cptd_index.html
+++ b/pages/cptd_index.html
@@ -28,9 +28,17 @@
 
         </section>
 
-        <button id="bot_button"></button>
+        <div id="popup" class="popup">
+            <div class="popup-content">
+              <h2>Has recibido un mensaje nuevo</h2>
+              <div class="buttons">
+                <button onclick="accept()">OK</button>
+              </div>
+            </div>
+          </div>
 
     </section>
+    <script src="/scripts/cptd_index.js"></script>
 </body>
 
 </html>
