--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/index.css" />
+    <link rel="stylesheet" href="../styles/index.css" />
     <title>Desktop</title>
   </head>
 
@@ -19,8 +19,8 @@
         </div>
 
         <div id="bot_half_screen">
-          <a id="wsp_trucho" class="app" href="/pages/wsp_trucho.html"></a>
-          <a id="nexus" class="app" href="/pages/nexus.html"></a>
+          <a id="wsp_trucho" class="app" href="../pages/wsp_trucho.html"></a>
+          <a id="nexus" class="app" href="../pages/nexus.html"></a>
         </div>
         <div></div>
       </section>
@@ -31,11 +31,11 @@
         <h2>Mensaje de número desconocido</h2>
         <p>Deseas leer el mensaje?</p>
         <div class="buttons">
-          <button onclick="accept()">Aceptar</button>
-          <button onclick="cancel()">Cancelar</button>
+          <button class="button_accept" onclick="accept()">Aceptar</button>
+          <button class="button_cancel" onclick="cancel()">Cancelar</button>
         </div>
       </div>
     </div>
-    <script src="/scripts/index.js"></script>
+    <script src="../scripts/index.js"></script>
   </body>
 </html>
