--- a/pages/cptd_index.html
+++ b/pages/cptd_index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/cptd_index.css" />
+    <link rel="stylesheet" href="../styles/cptd_index.css" />
     <title>Desktop</title>
   </head>
 
@@ -19,20 +19,20 @@
         </div>
 
         <div id="bot_half_screen">
-          <a id="wsp_trucho" class="app" href="/pages/cptd_wsp.html"></a>
-          <a id="nexus" class="app" href="/pages/real_nexus.html"></a>
+          <a id="wsp_trucho" class="app" href="../pages/cptd_wsp.html"></a>
+          <a id="nexus" class="app" href="../pages/real_nexus.html"></a>
         </div>
       </section>
 
       <div id="popup" class="popup">
         <div class="popup-content">
           <h2>Has recibido un mensaje nuevo</h2>
-          <div class="buttons">
-            <button onclick="accept()">OK</button>
+          <div class="button">
+            <button class="button_ok" onclick="accept()">OK</button>
           </div>
         </div>
       </div>
     </section>
-    <script src="/scripts/cptd_index.js"></script>
+    <script src="../scripts/cptd_index.js"></script>
   </body>
 </html>
