--- a/pages/nexus.html
+++ b/pages/nexus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/nexus.css" />
+    <link rel="stylesheet" href="../styles/nexus.css" />
     <title>Nexus</title>
   </head>
 
@@ -21,6 +21,6 @@
 
       <button id="bot_button"></button>
     </section>
-    <script src="/scripts/nexus.js"></script>
+    <script src="../scripts/nexus.js"></script>
   </body>
 </html>
