--- a/pages/cptd_wsp.html
+++ b/pages/cptd_wsp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/cptd_wsp.css" />
+    <link rel="stylesheet" href="../styles/cptd_wsp.css" />
     <title>WaZap</title>
   </head>
 
@@ -21,8 +21,8 @@
         </section>
       </div>
 
-      <a href="/pages/cptd_index.html"><button id="bot_button"></button></a>
+      <a href="../pages/cptd_index.html"><button id="bot_button"></button></a>
     </section>
-    <script src="/scripts/cptd_wsp.js"></script>
+    <script src="../scripts/cptd_wsp.js"></script>
   </body>
 </html>
