--- a/pages/real_nexus.html
+++ b/pages/real_nexus.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/real_nexus.css">
+    <link rel="stylesheet" href="../styles/real_nexus.css">
     <title>Document</title>
 </head>
 
@@ -25,7 +25,7 @@
 
         </section>
 
-        <a id="bot_button" href="/pages/cptd_index.html"></a>
+        <a id="bot_button" href="../pages/cptd_index.html"></a>
     </section>
 </body>
 
