--- a/pages/wsp_trucho.html
+++ b/pages/wsp_trucho.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/wsp_trucho.css">
+    <link rel="stylesheet" href="../styles/wsp_trucho.css">
     <title>WaZap</title>
 </head>
 
@@ -26,10 +26,10 @@
         </div>
 
 
-        <a href="/index.html"><button id="bot_button"></button></a>
+        <a href="../index.html"><button id="bot_button"></button></a>
         
     </section>
-    <script src="/scripts/wsp_trucho.js"></script>
+    <script src="../scripts/wsp_trucho.js"></script>
 </body>
 
 </html>
